# geomety

./: Cargo.toml
src/: lib.rs
src/geometry2d/: line.rs  mod.rs  point.rs  segment.rs  vector.rs
src/geometry2d/core/: circle.rs  directed_arc.rs  directed_circle.rs  follow.rs  line.rs  mod.rs  orientation.rs  path.rs  plot.rs  point.rs  polygon.rs  pose.rs  rotation.rs  segment.rs  trajectory.rs  vector.rs
src/geometry2d/imp/: f64.rs
src/geometry2d/typed/: mod.rs
tests/: circle_tangents.rs  contains.rs  convex_hull.rs  distance.rs  intersection.rs  parallel.rs  point_distance.rs  position_distance.rs  projection.rs
